main structure complete, resposive products section and a cart overlay added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
     </nav>
-    <!-- ------------------------------- !navbar ------------------------------- -->
+    <!-- ------------------------------- /navbar ------------------------------- -->
 
     <div class="hero">
       <div class="banner">
@@ -36,7 +36,64 @@
     </div>
   </header>
 
-  <!-- ------------------------------- !header ------------------------------- -->
+  <!-- ------------------------------- /header ------------------------------- -->
+
+  <main>
+    <section class="products">
+      <div class="section-title">
+        <h2>Our Products</h2>
+      </div>
+      <div class="products-center">
+        <article class="product">
+          <div class="img-container">
+            <img src="./images/product-1.jpeg" alt="product" class="product-img">
+            <button class="bag-btn" data-id="1">
+              <i class="fas fa-shopping-cart"></i>
+              Add To Bag
+            </button>
+          </div>
+          <h3>Queen Bed</h3>
+          <h4>$16</h4>
+        </article>
+      </div>
+    </section>
+
+    <!-- ------------------------------ /products ------------------------------ -->
+
+    <div class="cart-overlay">
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fas fa-window-close"></i>
+        </span>
+        <h2>Your Cart</h2>
+        <div class="cart-content">
+          <div class="cart-item">
+            <img src="./images/product-1.jpeg" alt="product">
+            <div>
+              <h4 class="">queen bed</h4>
+              <h5 class="">$9.00</h5>
+              <span class="remove-item">remove</span>
+            </div>
+
+            <div>
+              <i class="fas fa-chevron-up"></i>
+              <p class="item-amount">1</p>
+              <i class="fas fa-chevron-down"></i>
+            </div>
+          </div>
+        </div>
+        <div class="cart-footer">
+          <h3>your total : $ <span class="cart-total">0</span></h3>
+          <button class="clear-cart banner-btn">clear cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ------------------------------ /overlay ------------------------------- -->
+
+  </main>
+
+  <!-- -------------------------------- /main -------------------------------- -->
 
   <script src="app.js"></script>
 </body>
