dinamically displayed products from a json

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Our Products</h2>
       </div>
       <div class="products-center">
-        <article class="product">
+        <!-- <article class="product">
           <div class="img-container">
             <img src="./images/product-1.jpeg" alt="product" class="product-img">
             <button class="bag-btn" data-id="1">
@@ -54,7 +54,7 @@
           </div>
           <h3>Queen Bed</h3>
           <h4>$16</h4>
-        </article>
+        </article> -->
       </div>
     </section>
 
