added basket overlaying functionality

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
 </head>
 
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="navbar-center">
+  <nav class="navbar">
+    <div class="navbar-center">
+      <span class="nav-icon">
+        <i class="fas fa-bars"></i>
+      </span>
+      <img src="./images/logo.svg" alt="store logo">
+      <div class="cart-btn">
         <span class="nav-icon">
-          <i class="fas fa-bars"></i>
+          <i class="fas fa-cart-plus"></i>
         </span>
-        <img src="./images/logo.svg" alt="store logo">
-        <div class="cart-btn">
-          <span class="nav-icon">
-            <i class="fas fa-cart-plus"></i>
-          </span>
-          <div class="cart-items">0</div>
-        </div>
+        <div class="cart-items">0</div>
       </div>
-    </nav>
-    <!-- ------------------------------- /navbar ------------------------------- -->
+    </div>
+  </nav>
+  <!-- ------------------------------- /navbar ------------------------------- -->
+  <header>
+    <!-- ------------------------------- /header ------------------------------- -->
+
 
     <div class="hero">
       <div class="banner">
@@ -36,7 +38,6 @@
     </div>
   </header>
 
-  <!-- ------------------------------- /header ------------------------------- -->
 
   <main>
     <section class="products">
@@ -67,7 +68,7 @@
         </span>
         <h2>Your Cart</h2>
         <div class="cart-content">
-          <div class="cart-item">
+          <!-- <div class="cart-item">
             <img src="./images/product-1.jpeg" alt="product">
             <div>
               <h4 class="">queen bed</h4>
@@ -80,7 +81,7 @@
               <p class="item-amount">1</p>
               <i class="fas fa-chevron-down"></i>
             </div>
-          </div>
+          </div> -->
         </div>
         <div class="cart-footer">
           <h3>your total : $ <span class="cart-total">0</span></h3>
