--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     <div class="hero">
       <div class="banner">
         <h1 class="banner-title">Furniture Collection</h1>
-        <button class="banner-btn">Shop Now</button>
+        <a class="banner-btn" href="#main">Shop Now</a>
       </div>
     </div>
   </header>
 
 
-  <main>
+  <main id="main">
     <section class="products">
       <div class="section-title">
         <h2>Our Products</h2>
